test/typecheck/fail/undeclared_field_assignment.sail
default Order dec
$include <prelude.sail>

val main : unit -> unit

function main() = {
    x.foo = 0b0
}
